--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
 
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
-	<script src="assets/javascript/chapter.js"></script>
-	<script async src="assets/javascript/story.js"></script>
+	<script src="assets/javascript/volume.js"></script>
+	<script src="assets/javascript/story.js"></script>
+	<script async src="assets/javascript/list.js"></script>
 </head>
 <body>
 	<header>
 		<div class="symbol"></div>
-		<div class="title">『Dainisekai』</div>
+		<a class="title" href="">『Dainisekai』</a>
 	</header>
+	<div class="list">
+		<h1>『Dainisekai』- New life in wonderful world</h1>
+		<h2>Danh sách các Chapter</h2>
+		<hr>
+	</div>
 </body>
 </html>
