--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
 </head>
 <body>
 	<header>
-		<div class="symbol"></div>
-		<a class="title" href="">『Dainisekai』</a>
+		<div class="inHeader">
+			<div class="symbol"></div>
+			<a class="title" href="">『Dainisekai』</a>
+		</div>
+		<a class="content" href="">Đọc truyện</a>
+		<div class="content">SekaiDex</div>
 	</header>
 	<div class="list">
-		<h1>『Dainisekai』- New life in wonderful world</h1>
-		<h2>Danh sách các Chapter</h2>
+		<h1>『Dainisekai』</h1>
+		<h2>New life in wonderful world</h2>
+		<h3>Danh sách các Chapter</h3>
 		<hr>
 	</div>
 </body>
