--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script src="assets/javascript/volume.js"></script>
 	<script src="assets/javascript/story.js"></script>
+	<script src="assets/javascript/slider.js"></script>
 	<script async src="assets/javascript/list.js"></script>
 </head>
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="symbol"></div>
+			<a href=""><div class="symbol"></div></a>
 			<a class="title" href="">『Dainisekai』</a>
 		</div>
-		<a class="content" href="">Đọc truyện</a>
+		<a class="content" href="">Chapter</a>
 		<div class="content">SekaiDex</div>
 	</header>
 	<div class="list">
