--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<script src="assets/javascript/volume.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
+	<script src="assets/javascript/dex.js"></script>
 	<script async src="assets/javascript/list.js"></script>
 </head>
 <body>
@@ -40,7 +41,7 @@
 			<a class="title" href="">『Dainisekai』</a>
 		</div>
 		<a class="content" href="">Chapter</a>
-		<div class="content">SekaiDex</div>
+		<div class="content" onclick="dex()">SekaiDex</div>
 	</header>
 	<div class="list">
 		<h1>『Dainisekai』</h1>
