--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<script src="assets/javascript/volume.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
+	<script src="assets/javascript/sekaiDex.js"></script>
 	<script src="assets/javascript/dex.js"></script>
 	<script async src="assets/javascript/list.js"></script>
 </head>
@@ -40,8 +41,8 @@
 			<a href=""><div class="symbol"></div></a>
 			<a class="title" href="">『Dainisekai』</a>
 		</div>
-		<a class="content" href="">Chapter</a>
-		<div class="content" onclick="dex()">SekaiDex</div>
+		<a class="button" href="">Chapter</a>
+		<div class="button" onclick="addDex()">SekaiDex</div>
 	</header>
 	<div class="list">
 		<h1>『Dainisekai』</h1>
