--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#000bff">
-	<link rel="icon" href="assets/media/image/logo.png">
+	<link rel="icon" href="assets/media/image/icon/logo.png">
 
 	<!-- Primary Meta Tags -->
 	<title>『Dainisekai』 - New life in wonderful world</title>
