--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/">
 	<meta property="og:title" content="『Dainisekai』 - New life in wonderful world">
 	<meta property="og:description" content="Chào mừng đến với Thế giới thứ 2">
-	<meta property="og:image" content="">
+	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/">
 	<meta property="twitter:title" content="『Dainisekai』 - New life in wonderful world">
 	<meta property="twitter:description" content="Chào mừng đến với Thế giới thứ 2">
-	<meta property="twitter:image" content="">
+	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail.png">
 
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
