--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 		<h2>New life in wonderful world</h2>
 		<h3>Danh sách các Chapter</h3>
 		<hr>
+		<div class="buttons">
+			<div class="markAll"></div>
+			<div class="startRead" onclick="reChapter(volume.length - 1)">Đọc từ Chapter 0</div>
+		</div>
 	</div>
 </body>
 </html>
