--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/phone.css">
 	<script src="assets/javascript/volume.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
@@ -41,8 +42,10 @@
 			<a href=""><div class="symbol"></div></a>
 			<a class="title" href="">『Dainisekai』</a>
 		</div>
-		<a class="button" href="">Chapter</a>
-		<div class="button" onclick="addDex()">SekaiDex</div>
+		<div class="buttonHeader">
+			<a class="button" href="">Chapter</a>
+			<div class="button" onclick="addDex()">SekaiDex</div>
+		</div>
 	</header>
 	<div class="list">
 		<h1>『Dainisekai』</h1>
