--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<hr>
 		<div class="buttons">
 			<div class="markAll"></div>
-			<div class="startRead" onclick="window.open(`${urlChapter}${volume[volume.length - 1].chapter}`, '_self');">Đọc từ Chapter 0</div>
+			<div class="startRead" onclick="openZero()">Đọc từ Chapter 0</div>
 		</div>
 	</div>
 </body>
