--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="button" onclick="openDex()">SekaiDex</div>
 		</div>
 	</header>
-	<div class="list">
+	<section class="main">
 		<h1>『Dainisekai』</h1>
 		<h2>New life in wonderful world</h2>
 		<h3>Danh sách các Chapter</h3>
@@ -56,6 +56,6 @@
 			<div class="markAll"></div>
 			<div class="startRead" onclick="openZero()">Đọc từ Chapter 0</div>
 		</div>
-	</div>
+	</section>
 </body>
 </html>
