--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
 	<script src="assets/javascript/sekaiDex.js"></script>
+	<script src="assets/javascript/character.js"></script>
 	<script src="assets/javascript/dex.js"></script>
 	<script async src="assets/javascript/list.js"></script>
 </head>
@@ -55,9 +56,9 @@
 			<div class="desc">Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.</div>
 			<div class="tags">
 				<div class="tag">Fantasy</div>
+				<div class="tag">Slice of Life</div>
 				<div class="tag">Romance</div>
 				<div class="tag">Comedy</div>
-				<div class="tag">Slice of Life</div>
 				<div class="tag">Isekai</div>
 				<div class="tag">Drama</div>
 			</div>
