--- a/index.html
+++ b/index.html
@@ -7,68 +7,48 @@
 	<link rel="icon" href="assets/media/image/icon/logo.png">
 
 	<!-- Primary Meta Tags -->
-	<title>『Dainisekai』 - New life in wonderful world</title>
-	<meta name="title" content="『Dainisekai』- New life in wonderful world">
-	<meta name="description" content="Chào mừng đến với Thế giới thứ 2">
+	<title>『Dainisekai』</title>
+	<meta name="title" content="『Dainisekai』">
+	<meta name="description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
 	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/">
-	<meta property="og:title" content="『Dainisekai』- New life in wonderful world">
-	<meta property="og:description" content="Chào mừng đến với Thế giới thứ 2">
-	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail.png">
+	<meta property="og:title" content="『Dainisekai』">
+	<meta property="og:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
+	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/index.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/">
-	<meta property="twitter:title" content="『Dainisekai』- New life in wonderful world">
-	<meta property="twitter:description" content="Chào mừng đến với Thế giới thứ 2">
-	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail.png">
+	<meta property="twitter:title" content="『Dainisekai』">
+	<meta property="twitter:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
+	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/index.png">
 
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/phone.css">
-	<script src="assets/javascript/volume.js"></script>
-	<script src="assets/javascript/story.js"></script>
-	<script src="assets/javascript/slider.js"></script>
-	<script src="assets/javascript/sekaiDex.js"></script>
-	<script src="assets/javascript/character.js"></script>
-	<script src="assets/javascript/dex.js"></script>
-	<script async src="assets/javascript/list.js"></script>
+	<script src="assets/javascript/index.js"></script>
 </head>
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="symbol" onclick="openMain()"></div>
-			<div class="title" onclick="openMain()">『Dainisekai』</div>
-		</div>
-		<div class="buttonHeader">
-			<div class="button"  onclick="openMain()">Chapter</div>
-			<div class="button" onclick="openDex()">SekaiDex</div>
+			<div class="symbol" onclick="openIndex()"></div>
+			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 	</header>
 	<section class="main">
-		<h1>『Dainisekai』</h1>
-		<h2>New life in wonderful world</h2>
+		<h1>Danh sách truyện của mọi người</h1>
 		<div class="infoContent">
-			<div class="author">Hg</div>
-			<div class="desc">Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.</div>
-			<div class="tags">
-				<div class="tag">Fantasy</div>
-				<div class="tag">Slice of Life</div>
-				<div class="tag">Romance</div>
-				<div class="tag">Comedy</div>
-				<div class="tag">Isekai</div>
-				<div class="tag">Drama</div>
-			</div>
+			<div class="desc">Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra.</div>
 		</div>
-		<h3>Danh sách các Chapter</h3>
 		<hr>
-		<div class="buttons">
-			<div class="markAll"></div>
-			<div class="startRead" onclick="openZero()">Đọc từ Chapter 0</div>
-		</div>
+		<h4 class="headerSmall author">Hg</h4>
+		<a class="chapter" href="New_life_in_wonderful_world.html">New life in wonderful world</a>
+		<h4 class="headerSmall author">Fortune</h4>
+		<a class="chapter" href="The_True_Therian.html">The True Therian</a>
+		<a class="chapter" href="Alternative_Pathway_of_Samsara.html">Alternative Pathway of Samsara</a>
 	</section>
 </body>
 </html>
