--- a/Alternative_Pathway_of_Samsara.html
+++ b/Alternative_Pathway_of_Samsara.html
@@ -49,7 +49,7 @@
 		<div class="infoContent">
 			<div class="author">Fortune, Hg</div>
 			<div class="desc"></div>
-			<div>...</div>
+			<div>Từng bước, từng bước, Franklin lại một lần nữa thức giấc ở một vùng đất xa lạ. Nơi này là nơi nào, cậu phải làm gì ở nơi này, liệu đây có phải là lựa chọn đúng đắn? Tất cả đều không quan trọng, trong đầu Franklin bây giờ chỉ có một mục tiêu, hoàn thành con đường này và tiến lên một tầm cao mới, vươn tới thứ sức mạnh bí ẩn để cứu lấy người cậu thương yêu</div>
 			<div class="tags">
 				<div class="tag">Adventure</div>
 				<div class="tag">Fantasy</div>
