--- a/New_life_in_wonderful_world.html
+++ b/New_life_in_wonderful_world.html
@@ -40,7 +40,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="symbol" onclick="openIndex()"></div>
+			<div class="logHorizonSymbol" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
