--- a/New_life_in_wonderful_world.html
+++ b/New_life_in_wonderful_world.html
@@ -35,7 +35,7 @@
 	<script src="assets/javascript/sekaiDex.js"></script>
 	<script src="assets/javascript/character.js"></script>
 	<script src="assets/javascript/dex.js"></script>
-	<script async src="assets/javascript/list.js"></script>
+	<script defer src="assets/javascript/list.js"></script>
 </head>
 <body>
 	<header>
