--- a/The_True_Therian.html
+++ b/The_True_Therian.html
@@ -32,7 +32,7 @@
 	<script src="assets/javascript/upload/002/01.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
-	<script async src="assets/javascript/list.js"></script>
+	<script defer src="assets/javascript/list.js"></script>
 </head>
 <body>
 	<header>
