--- a/Alternative_Pathway_of_Samsara.html
+++ b/Alternative_Pathway_of_Samsara.html
@@ -9,21 +9,21 @@
 	<!-- Primary Meta Tags -->
 	<title>『Dainisekai』 - Alternative Pathway of Samsara</title>
 	<meta name="title" content="『Dainisekai』- Alternative Pathway of Samsara">
-	<meta name="description" content="">
+	<meta name="description" content="Từng bước, từng bước, Franklin lại một lần nữa thức giấc ở một vùng đất xa lạ. Nơi này là nơi nào, cậu phải làm gì ở nơi này, liệu đây có phải là lựa chọn đúng đắn? Tất cả đều không quan trọng, trong đầu Franklin bây giờ chỉ có một mục tiêu, hoàn thành con đường này và tiến lên một tầm cao mới, vươn tới thứ sức mạnh bí ẩn để cứu lấy người cậu thương yêu">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
 	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/Alternative_Pathway_of_Samsara.html">
 	<meta property="og:title" content="『Dainisekai』- Alternative Pathway of Samsara">
-	<meta property="og:description" content="">
+	<meta property="og:description" content="Từng bước, từng bước, Franklin lại một lần nữa thức giấc ở một vùng đất xa lạ. Nơi này là nơi nào, cậu phải làm gì ở nơi này, liệu đây có phải là lựa chọn đúng đắn? Tất cả đều không quan trọng, trong đầu Franklin bây giờ chỉ có một mục tiêu, hoàn thành con đường này và tiến lên một tầm cao mới, vươn tới thứ sức mạnh bí ẩn để cứu lấy người cậu thương yêu">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/The_True_Therian.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/Alternative_Pathway_of_Samsara.html">
 	<meta property="twitter:title" content="『Dainisekai』- Alternative Pathway of Samsara">
-	<meta property="twitter:description" content="">
+	<meta property="twitter:description" content="Từng bước, từng bước, Franklin lại một lần nữa thức giấc ở một vùng đất xa lạ. Nơi này là nơi nào, cậu phải làm gì ở nơi này, liệu đây có phải là lựa chọn đúng đắn? Tất cả đều không quan trọng, trong đầu Franklin bây giờ chỉ có một mục tiêu, hoàn thành con đường này và tiến lên một tầm cao mới, vươn tới thứ sức mạnh bí ẩn để cứu lấy người cậu thương yêu">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/The_True_Therian.png">
 
 	<!-- CSS/Script -->
