--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 		<h4 class="headerSmall author">Fortune</h4>
 		<a class="chapter" href="The_True_Therian.html">The True Therian</a>
 		<a class="chapter" href="Alternative_Pathway_of_Samsara.html">Alternative Pathway of Samsara</a>
+		<h4 class="headerSmall author">Một anh bạn to lớn màu xanh</h4>
+		<a class="chapter" href="Urzog_-_Path_of_the_Berserker.html">Urzog - Path of the Berserker</a>
 	</section>
 </body>
 </html>
