--- a/New_life_in_wonderful_world.html
+++ b/New_life_in_wonderful_world.html
@@ -9,21 +9,21 @@
 	<!-- Primary Meta Tags -->
 	<title>『Dainisekai』 - New life in wonderful world</title>
 	<meta name="title" content="『Dainisekai』- New life in wonderful world">
-	<meta name="description" content="Chào mừng đến với Thế giới thứ 2">
+	<meta name="description" content="Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
 	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/New_life_in_wonderful_world.html">
 	<meta property="og:title" content="『Dainisekai』- New life in wonderful world">
-	<meta property="og:description" content="Chào mừng đến với Thế giới thứ 2">
+	<meta property="og:description" content="Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/New_life_in_wonderful_world.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/New_life_in_wonderful_world.html">
 	<meta property="twitter:title" content="『Dainisekai』- New life in wonderful world">
-	<meta property="twitter:description" content="Chào mừng đến với Thế giới thứ 2">
+	<meta property="twitter:description" content="Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/New_life_in_wonderful_world.png">
 
 	<!-- CSS/Script -->
