--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 		<a class="chapter" href="Alternative_Pathway_of_Samsara.html">Alternative Pathway of Samsara</a>
 		<h4 class="headerSmall author">Một anh bạn to lớn màu xanh</h4>
 		<a class="chapter" href="Urzog_-_Path_of_the_Berserker.html">Urzog - Path of the Berserker</a>
+		<h4 class="headerSmall author">Sakana-san</h4>
+		<a class="chapter" href="Skyriders_-_A_space_odyssey.html">Skyriders - A space odyssey</a>
 	</section>
 </body>
 </html>
