--- a/Skyriders_-_A_space_odyssey.html
+++ b/Skyriders_-_A_space_odyssey.html
@@ -55,6 +55,7 @@
 				<div class="tag">Fantasy</div>
 				<div class="tag">Romance</div>
 				<div class="tag">Comedy</div>
+				<div class="tag">Sci-Fi</div>
 			</div>
 		</div>
 		<h3>Danh sách các Chapter</h3>
