--- a/Skyriders_-_A_space_odyssey.html
+++ b/Skyriders_-_A_space_odyssey.html
@@ -14,14 +14,14 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
-	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/Skyriders_-_A_space_odyssey.html">
+	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/Skyriders_-_A_space_odyssey.html">
 	<meta property="og:title" content="『Dainisekai』- Skyriders - A space odyssey">
 	<meta property="og:description" content="Skyriders, trong vũ trụ bao la, là những con người du ngoạn giữa biển sao, mang trong mình sứ mệnh của những Nhà khai phá và nhiệt huyết của những con người kiếm tìm sự thật. Đây là câu chuyện của Gotokuji Akira, và sứ mệnh khai phá của cậu cùng các Skyriders.">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/Skyriders_-_A_space_odyssey.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/Skyriders_-_A_space_odyssey.html">
+	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/Skyriders_-_A_space_odyssey.html">
 	<meta property="twitter:title" content="『Dainisekai』- Skyriders - A space odyssey">
 	<meta property="twitter:description" content="Skyriders, trong vũ trụ bao la, là những con người du ngoạn giữa biển sao, mang trong mình sứ mệnh của những Nhà khai phá và nhiệt huyết của những con người kiếm tìm sự thật. Đây là câu chuyện của Gotokuji Akira, và sứ mệnh khai phá của cậu cùng các Skyriders.">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/Skyriders_-_A_space_odyssey.png">
