--- a/The_True_Therian.html
+++ b/The_True_Therian.html
@@ -14,14 +14,14 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
-	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/The_True_Therian.html">
+	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/The_True_Therian.html">
 	<meta property="og:title" content="『Dainisekai』- The True Therian">
 	<meta property="og:description" content="Franklin Bravesoul vốn là một người chuyển sinh do Văn phòng Re:Life đưa tới với lời hứa về một cơ hội sống thứ hai. Cậu được ban cho thiên phú về ma thuật và tri thức của kiếp trước, nhưng cậu không cần tới chúng. Franklin sống một cuộc đời an tĩnh bình yên suốt cả thời thơ ấu, và cậu không có ý định thay đổi nó, mọi thứ những tưởng như đã rất hoàn hảo. Nhưng...">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/The_True_Therian.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/The_True_Therian.html">
+	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/The_True_Therian.html">
 	<meta property="twitter:title" content="『Dainisekai』- The True Therian">
 	<meta property="twitter:description" content="Franklin Bravesoul vốn là một người chuyển sinh do Văn phòng Re:Life đưa tới với lời hứa về một cơ hội sống thứ hai. Cậu được ban cho thiên phú về ma thuật và tri thức của kiếp trước, nhưng cậu không cần tới chúng. Franklin sống một cuộc đời an tĩnh bình yên suốt cả thời thơ ấu, và cậu không có ý định thay đổi nó, mọi thứ những tưởng như đã rất hoàn hảo. Nhưng...">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/The_True_Therian.png">
