--- a/Urzog_-_Path_of_the_Berserker.html
+++ b/Urzog_-_Path_of_the_Berserker.html
@@ -14,14 +14,14 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
-	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/Urzog_-_Path_of_the_Berserker.html">
+	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/Urzog_-_Path_of_the_Berserker.html">
 	<meta property="og:title" content="『Dainisekai』- Urzog - Path of the Berserker">
 	<meta property="og:description" content="Một gã sinh viên đầu to mắt cận đã chết ở thế giới cũ, những tưởng sẽ đi chầu Diêm vương nhưng người mà cậu chầu lại là một gã nhân viên bàn giấy thuộc văn phòng Re:Life và chuyển sinh sang một thế giới mới. Vứt lại những ngày tháng của một tên mọt sách sợ giao tiếp, cậu lao vào cuộc sống mới mà chẳng hề biết sẽ có những điều gì đang chờ đợi phía trước, liệu đó sẽ là một cuộc sống thú vị hay lại một cuộc đời buồn tẻ, thật là khó để có thể trả lời hết trong một vài câu nói, thôi thì hãy lật từng trang truyện, khám phá từ từ những mảnh chuyện của cậu tại thế giới kì ảo này">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/Urzog_-_Path_of_the_Berserker.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/Urzog_-_Path_of_the_Berserker.html">
+	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/Urzog_-_Path_of_the_Berserker.html">
 	<meta property="twitter:title" content="『Dainisekai』- Urzog - Path of the Berserker">
 	<meta property="twitter:description" content="Một gã sinh viên đầu to mắt cận đã chết ở thế giới cũ, những tưởng sẽ đi chầu Diêm vương nhưng người mà cậu chầu lại là một gã nhân viên bàn giấy thuộc văn phòng Re:Life và chuyển sinh sang một thế giới mới. Vứt lại những ngày tháng của một tên mọt sách sợ giao tiếp, cậu lao vào cuộc sống mới mà chẳng hề biết sẽ có những điều gì đang chờ đợi phía trước, liệu đó sẽ là một cuộc sống thú vị hay lại một cuộc đời buồn tẻ, thật là khó để có thể trả lời hết trong một vài câu nói, thôi thì hãy lật từng trang truyện, khám phá từ từ những mảnh chuyện của cậu tại thế giới kì ảo này">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/Urzog_-_Path_of_the_Berserker.png">
