--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
-	<meta property="og:url" content="https://hgvn23.github.io/『Dainisekai』/">
+	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/">
 	<meta property="og:title" content="『Dainisekai』">
 	<meta property="og:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://hgvn23.github.io/『Dainisekai』/">
+	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/">
 	<meta property="twitter:title" content="『Dainisekai』">
 	<meta property="twitter:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
