--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<a class="chapter" href="Urzog_-_Path_of_the_Berserker.html">Urzog - Path of the Berserker</a>
 		<h4 class="headerSmall author">Sakana-san</h4>
 		<a class="chapter" href="Skyriders_-_A_space_odyssey.html">Skyriders - A space odyssey</a>
+		<a class="chapter" href="Skyriders_Legacy_Gotokuji_Shiro.html">Skyriders’ Legacy: Gotokuji Shiro</a>
 	</section>
 </body>
 </html>
