--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 	<!-- Primary Meta Tags -->
 	<title>『Dainisekai』</title>
 	<meta name="title" content="『Dainisekai』">
-	<meta name="description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
+	<meta name="description" content="Đại vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
 	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/">
 	<meta property="og:title" content="『Dainisekai』">
-	<meta property="og:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
+	<meta property="og:description" content="Đại vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/">
 	<meta property="twitter:title" content="『Dainisekai』">
-	<meta property="twitter:description" content="Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
+	<meta property="twitter:description" content="Đại vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
 
 	<!-- CSS/Script -->
@@ -41,7 +41,7 @@
 	<section class="main">
 		<h1>Danh sách truyện của mọi người</h1>
 		<div class="infoContent">
-			<div class="desc">Vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra.</div>
+			<div class="desc">Đại vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra.</div>
 		</div>
 		<hr>
 		<h4 class="headerSmall author">Hg</h4>
