--- a/Skyriders_-_A_space_odyssey.html
+++ b/Skyriders_-_A_space_odyssey.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="buttonHeader">
 			<div class="button" onclick="openMain()">Chapter</div>
-			<a class="button" href="https://docs.google.com/document/d/1HX5dcWL-rMQNLPQKy3-V_x5fRUKQnr5indfdnfygnXU/edit?usp=sharing" target="_blank">SkyDex</a>
+			<a class="button" href="https://docs.google.com/document/d/1-E-61fZ_VzSZEJ9PADSWjfODPm7Ebs9f/edit?usp=sharing&ouid=111288011003834136848&rtpof=true&sd=true" target="_blank">SkyDex</a>
 		</div>
 	</header>
 	<section class="main">
