--- a/New_life_in_wonderful_world.html
+++ b/New_life_in_wonderful_world.html
@@ -29,6 +29,7 @@
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/phone.css">
+	<script src="assets/javascript/sekaiDex/name.js"></script>
 	<script src="assets/javascript/upload/001/01.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
@@ -49,7 +50,7 @@
 		</div>
 	</header>
 	<section class="main">
-		<h2>New life in wonderful world</h2>
+		<h1>New life in wonderful world</h1>
 		<div class="infoContent">
 			<div class="author">Hg</div>
 			<div class="desc">Sau khi gặp tai nạn, văn phòng Re:Life đã chuyển sinh Hg đến thế giới khác được gọi là『Dainisekai』. Giờ tên cậu là Tamada Shuuya và với cơ hội thứ 2, cậu sẽ tận hưởng cuộc sống mới này hết mức có thể cho đến khi câu truyện đến hồi kết thì thôi.</div>
@@ -62,7 +63,7 @@
 				<div class="tag">Isekai</div>
 			</div>
 		</div>
-		<h3>Danh sách các Chapter</h3>
+		<h2>Danh sách các Chapter</h2>
 		<hr>
 		<div class="buttons">
 			<div class="markAll"></div>
