--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 			<div class="desc">Đại vũ trụ Fantasy do một nhóm người rảnh muốn viết lách tạo ra.</div>
 		</div>
 		<hr>
-		<h4 class="headerSmall author">Hg</h4>
+		<h3 class="author">Hg</h3>
 		<a class="chapter" href="New_life_in_wonderful_world.html">New life in wonderful world</a>
-		<h4 class="headerSmall author">Fortune</h4>
+		<h3 class="author">Fortune</h3>
 		<a class="chapter" href="The_True_Therian.html">The True Therian</a>
 		<a class="chapter" href="Alternative_Pathway_of_Samsara.html">Alternative Pathway of Samsara</a>
-		<h4 class="headerSmall author">Một anh bạn to lớn màu xanh</h4>
+		<h3 class="author">Một anh bạn to lớn màu xanh</h3>
 		<a class="chapter" href="Urzog_-_Path_of_the_Berserker.html">Urzog - Path of the Berserker</a>
-		<h4 class="headerSmall author">Sakana-san</h4>
+		<h3 class="author">Sakana-san</h3>
 		<a class="chapter" href="Skyriders_-_A_space_odyssey.html">Skyriders - A space odyssey</a>
 		<a class="chapter" href="Skyriders_Legacy_Gotokuji_Shiro.html">Skyriders’ Legacy: Gotokuji Shiro</a>
 	</section>
