--- a/New_life_in_wonderful_world.html
+++ b/New_life_in_wonderful_world.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+	<!-- <meta http-equiv="refresh" content="10"> -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#000bff">
