--- a/Skyriders_Legacy_Gotokuji_Shiro.html
+++ b/Skyriders_Legacy_Gotokuji_Shiro.html
@@ -37,7 +37,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="skyriderLegacySymbol" onclick="openIndex()"></div>
+			<div class="skyriderShiroSymbol" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
