--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<h3 class="author">Sakana-san</h3>
 		<a class="chapter" href="Skyriders_-_A_space_odyssey.html">Skyriders - A space odyssey</a>
 		<a class="chapter" href="Skyriders_Legacy_Gotokuji_Shiro.html">Skyriders’ Legacy: Gotokuji Shiro</a>
+		<a class="chapter" href="Skyriders_Legacy_Fig_Rizzo.html">Skyriders’ Legacy: Fig Rizzo</a>
 	</section>
 </body>
 </html>
