--- a/Skyriders_Legacy_Fig_Rizzo.html
+++ b/Skyriders_Legacy_Fig_Rizzo.html
@@ -37,7 +37,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="skyriderFigSymbol" onclick="openIndex()"></div>
+			<div class="symbol skyriderFig" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
