--- a/Skyriders_-_A_space_odyssey.html
+++ b/Skyriders_-_A_space_odyssey.html
@@ -37,7 +37,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="skyriderSymbol" onclick="openIndex()"></div>
+			<div class="symbol skyrider" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
