--- a/The_True_Therian.html
+++ b/The_True_Therian.html
@@ -37,7 +37,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="dainisekaiSymbol" onclick="openIndex()"></div>
+			<div class="symbol dainisekai" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
