--- a/Urzog_-_Path_of_the_Berserker.html
+++ b/Urzog_-_Path_of_the_Berserker.html
@@ -37,7 +37,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="urzogSymbol" onclick="openIndex()"></div>
+			<div class="symbol urzog" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 		<div class="buttonHeader">
