--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 	<header>
 		<div class="inHeader">
-			<div class="dainisekaiSymbol" onclick="openIndex()"></div>
+			<div class="symbol dainisekai" onclick="openIndex()"></div>
 			<div class="title" onclick="openIndex()">『Dainisekai』</div>
 		</div>
 	</header>
