--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 		<a class="chapter" href="Skyriders_Legacy_Fig_Rizzo.html">Skyriders’ Legacy: Fig Rizzo</a>
 		<h3 class="author">LMQ</h3>
 		<a class="chapter" href="Akoras_Bizarre_Adventure.html">Akora's Bizarre Adventure</a>
+		<h3 class="author">YPRKHECSAT</h3>
+		<a class="chapter" href="Dragoenix_Lands_Legacy.html">Dragoenix Land's Legacy</a>
 	</section>
 </body>
 </html>
