--- a/Akoras_Bizarre_Adventure.html
+++ b/Akoras_Bizarre_Adventure.html
@@ -9,21 +9,21 @@
 	<!-- Primary Meta Tags -->
 	<title>『Dainisekai』 - Akora's Bizarre Adventure</title>
 	<meta name="title" content="『Dainisekai』- Akora's Bizarre Adventure">
-	<meta name="description" content="Cuộc phiêu lưu kì dị của “vua A” cùng “dàn cung nữ” tại dị giới">
+	<meta name="description" content="Cuộc phiêu lưu kì dị của “vua A” tại dị giới">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Website by Hg">
 	<meta property="og:url" content="https://hgvn23.github.io/Dainisekai/Akoras_Bizarre_Adventure.html">
 	<meta property="og:title" content="『Dainisekai』- Akora's Bizarre Adventure">
-	<meta property="og:description" content="Cuộc phiêu lưu kì dị của “vua A” cùng “dàn cung nữ” tại dị giới">
+	<meta property="og:description" content="Cuộc phiêu lưu kì dị của “vua A” tại dị giới">
 	<meta property="og:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://hgvn23.github.io/Dainisekai/Akoras_Bizarre_Adventure.html">
 	<meta property="twitter:title" content="『Dainisekai』- Akora's Bizarre Adventure">
-	<meta property="twitter:description" content="Cuộc phiêu lưu kì dị của “vua A” cùng “dàn cung nữ” tại dị giới">
+	<meta property="twitter:description" content="Cuộc phiêu lưu kì dị của “vua A” tại dị giới">
 	<meta property="twitter:image" content="https://raw.githubusercontent.com/HgVN23/Dainisekai/main/assets/media/image/thumbnail/index.png">
 
 	<!-- CSS/Script -->
