--- a/Skyriders_Legacy_Gotokuji_Shiro.html
+++ b/Skyriders_Legacy_Gotokuji_Shiro.html
@@ -29,6 +29,7 @@
 	<!-- CSS/Script -->
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/phone.css">
+	<script src="assets/javascript/upload/004/format.js"></script>
 	<script src="assets/javascript/upload/004/02.js"></script>
 	<script src="assets/javascript/story.js"></script>
 	<script src="assets/javascript/slider.js"></script>
