--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<a class="chapter" href="Skyriders_-_A_space_odyssey.html">Skyriders - A space odyssey</a>
 		<a class="chapter" href="Skyriders_Legacy_Gotokuji_Shiro.html">Skyriders’ Legacy: Gotokuji Shiro</a>
 		<a class="chapter" href="Skyriders_Legacy_Fig_Rizzo.html">Skyriders’ Legacy: Fig Rizzo</a>
+		<a class="chapter" href="Skyriders_Legacy_Galaxy_Rangers.html">Skyriders’ Legacy: Galaxy Rangers</a>
 		<h3 class="author">LMQ</h3>
 		<a class="chapter" href="Akoras_Bizarre_Adventure.html">Akora's Bizarre Adventure</a>
 		<h3 class="author">YPRKHECSAT</h3>
