--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<a class="chapter" href="Akoras_Bizarre_Adventure.html">Akora's Bizarre Adventure</a>
 		<h3 class="author">YPRKHECSAT</h3>
 		<a class="chapter" href="Dragoenix_Lands_Legacy.html">Dragoenix Land's Legacy</a>
+		<a class="chapter" href="Dragoenix_Lands_Shorts.html">Dragoenix Land's Shorts</a>
 	</section>
 </body>
 </html>
